Updating Target framework, this is before attempting to change [AllowNull] to use ? type instead.

--- a/src/EncompassRest.Tests/EncompassRest.Tests.csproj
+++ b/src/EncompassRest.Tests/EncompassRest.Tests.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;net45;netcoreapp3.0;netcoreapp2.0;netcoreapp1.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RepositoryType>git</RepositoryType>
     <Configurations>Debug;Release;CI</Configurations>
@@ -9,12 +8,13 @@
     <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>encompassrest.snk</AssemblyOriginatorKeyFile>
     <LangVersion>latest</LangVersion>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
     <PackageReference Include="Moq" Version="4.10.0" />
   </ItemGroup>
 
